Fix cards overflow while expanding

--- a/app/components/CardEditor.scss
+++ b/app/components/CardEditor.scss
@@ -82,6 +82,7 @@
     width: 100%;
     margin-top: 10px;
     border-radius: 10px;
+    transition: color 0.5s;
     padding: 10px 5px;
 
     @include breakpoint(small) {
